[package]
name = "receipts"
version = "0.1.0"
authors = ["Zac Burns <That3Percent@gmail.com>"]
edition = "2018"


[dependencies]
primitive-types = "0.8"
rand = "0.8"
eip-712-derive = { git = "ssh://git@github.com/graphprotocol/eip-712-derive.git" }
secp256k1 = "0.20"
lazy_static = "1.4.0"
tiny-keccak = { version="2.0.2", features = ["sha3"] }

# TODO: The test so far was *slower* with parallel on. Maybe just a small data set.
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std", default-features = false, features=["parallel"] }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false, features=["parallel"] }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false, features=["parallel"] }
ark-std = { git = "https://github.com/arkworks-rs/utils", default-features = false, features=["parallel"] }
ark-relations = { git = "https://github.com/arkworks-rs/snark", default-features = false }
ark-test-curves = { git = "https://github.com/arkworks-rs/algebra", default-features = false, features = ["bls12_381_scalar_field", "mnt4_753_scalar_field", "parallel"] }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives", default-features= false, features = ["r1cs", "std", "parallel"], branch="main" }
ark-ed-on-bls12-381 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = [ "r1cs" ] }

# This doesn't depend on byteorder directly,
# but if this is left out then the dependency through
# primitive-types will select "1.4.0", which has a bug
# causing a panic when converting a U256 to bytes.
# So, one would like to say byteorder = "1.4.2" to fix this.
# But, then when used in indexer-selection, that depends on
# graphql-parser, which depends on an old version of combine,
# which specifies an exact match for byteorder="1.3.4". So,
# Specifying "1.4.2" causes cargo to bail when unable to resolve
# the dependency conflict.
byteorder = "=1.3.4"
