[package]
authors = ["Zac Burns <That3Percent@gmail.com>"]
edition = "2021"
name = "receipts"
version = "0.2.0"

[dependencies]
hex = { version = "0.4", default-features = false }
itertools = { version = "0.10", optional = true }
lazy_static = "1.4"
primitive-types = "0.12"
rand = { version = "0.8", optional = true }
secp256k1 = { version = "0.24", features = ["recovery"] }
tiny-keccak = { version = "2", features = ["keccak"] }

[features]
default = ["sender"]
sender = ["dep:itertools", "dep:rand"]
receiver = []
